--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,7 +3,6 @@
     src: url('../fonts/Newsreader-Italic-VariableFont_opsz,wght.ttf');
 }
 
-
 body {
     font-family: "MiFuente";
     background-color: #F8F8F8;
@@ -21,7 +20,7 @@ body {
         "Footer Footer";
     gap: 5px; /* Espacio entre columnas */
 }
-  
+
   .Banner {
     color:  #F8F8F8;
      grid-area: Banner;
@@ -243,6 +242,27 @@ body {
     border-radius: 8px; 
 }
 
+.lista-estilizada {
+    list-style: none; /* Quita los puntos por defecto */
+    padding-left: 0;
+}
+
+.lista-estilizada li {
+    position: relative;
+    padding-left: 30px; /* Espacio para el ícono */
+    margin-bottom: 10px;
+    font-size: 18px;
+}
+
+.lista-estilizada li::before {
+    content: "✔"; /* Ícono de check */
+    color: #2E7D32; /* Verde agradable */
+    font-weight: bold;
+    position: absolute;
+    left: 0;
+    top: 2px;
+}
+
 h1 {
     font-size: 24px;
     color: #1b4332;
@@ -410,6 +430,27 @@ blockquote {
 .Contenido, .Barra {
     min-height: 100%;
 }
+.btn-arriba {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #2E7D32; /* Verde oscuro agradable */
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    border-radius: 50%;
+    font-size: 20px;
+    display: none;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2); /* Sombra sutil */
+    transition: background-color 0.3s, transform 0.2s;
+}
+
+.btn-arriba:hover {
+    background-color: #1B5E20; /* Verde más oscuro */
+    transform: scale(1.1); /* Pequeño zoom al pasar el mouse */
+}
+
+
   .Footer {
     grid-area: Footer;
     background-color: #A8D5BA; /* Verde pastel suave */
